--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width" />
-    %sveltekit.head%
-  </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+  <meta name="viewport" content="width=device-width" />
+  %sveltekit.head%
+  <style>
+    @font-face {
+      font-family: 'Zodiak-LightItalic';
+      src: url('../fonts/Zodiak-LightItalic.woff2') format('woff2');
+      font-weight: 300;
+      font-display: swap;
+      font-style: italic;
+    }
+
+    @font-face {
+      font-family: 'zed-sans-extendedbold';
+      src: url('../fonts/zed-sans-extendedbold.woff2') format('woff2');
+      font-weight: 700;
+      font-display: swap;
+      font-style: bold;
+    }
+
+    @font-face {
+      font-family: 'zed-sans-extended';
+      src: url('../fonts/zed-sans-extended.woff2') format('woff2');
+      font-weight: 400;
+      font-display: swap;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'GeneralSans-Regular';
+      src: url('../fonts/GeneralSans-Regular.woff2') format('woff2');
+      font-weight: 400;
+      font-display: swap;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'GeneralSans-Italic';
+      src: url('../fonts/GeneralSans-Italic.woff2') format('woff2');
+      font-weight: 400;
+      font-display: swap;
+      font-style: italic;
+    }
+
+    @font-face {
+      font-family: 'GeneralSans-Bold';
+      src: url('../fonts/GeneralSans-Bold.woff2') format('woff2');
+      font-weight: 700;
+      font-display: swap;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'GeneralSans-BoldItalic';
+      src: url('../fonts/GeneralSans-BoldItalic.woff2') format('woff2');
+      font-weight: 700;
+      font-display: swap;
+      font-style: italic;
+    }
+  </style>
+</head>
+
+<body data-sveltekit-preload-data="hover">
+  <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
