get it fixed for now

--- a/src/app.html
+++ b/src/app.html
@@ -14,45 +14,51 @@
       font-display: swap;
       font-style: italic;
     }
+
     @font-face {
-      font-family: 'zed-sans-extendedbold';
-      src: url('../fonts/zed-sans-extendedbold.woff2') format('woff2');
+      font-family: 'zed-sans-regular';
+      src: url('../fonts/Zed-sans-Regular.woff2') format('woff2');
+      font-weight: 400;
+      font-display: swap;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'zed-sans-bold';
+      src: url('../fonts/Zed-sans-Bold.woff2') format('woff2');
       font-weight: 700;
       font-display: swap;
       font-style: bold;
     }
+
     @font-face {
-      font-family: 'zed-sans-extended';
-      src: url('../fonts/zed-sans-extended.woff2') format('woff2');
+      font-family: 'Switzer-Regular';
+      src: url('../fonts/Switzer-Regular.woff2') format('woff2');
       font-weight: 400;
       font-display: swap;
       font-style: normal;
     }
+
     @font-face {
-      font-family: 'GeneralSans-Regular';
-      src: url('../fonts/GeneralSans-Regular.woff2') format('woff2');
-      font-weight: 400;
-      font-display: swap;
-      font-style: normal;
-    }
-    @font-face {
-      font-family: 'GeneralSans-Italic';
-      src: url('../fonts/GeneralSans-Italic.woff2') format('woff2');
+      font-family: 'Switzer-Italic';
+      src: url('../fonts/Switzer-Italic.woff2') format('woff2');
       font-weight: 400;
       font-display: swap;
       font-style: italic;
     }
+
     @font-face {
-      font-family: 'GeneralSans-Bold';
-      src: url('../fonts/GeneralSans-Bold.woff2') format('woff2');
-      font-weight: 700;
+      font-family: 'Switzer-Semibold';
+      src: url('../fonts/Switzer-Semibold.woff2') format('woff2');
+      font-weight: 600;
       font-display: swap;
       font-style: normal;
     }
+
     @font-face {
-      font-family: 'GeneralSans-BoldItalic';
-      src: url('../fonts/GeneralSans-BoldItalic.woff2') format('woff2');
-      font-weight: 700;
+      font-family: 'Switzer-SemiboldItalic';
+      src: url('../fonts/Switzer-SemiboldItalic.woff2') format('woff2');
+      font-weight: 600;
       font-display: swap;
       font-style: italic;
     }
