--- a/src/app.html
+++ b/src/app.html
@@ -28,37 +28,53 @@
       src: url('../fonts/Zed-sans-Bold.woff2') format('woff2');
       font-weight: 700;
       font-display: swap;
-      font-style: bold;
+      font-style: normal;
     }
 
     @font-face {
-      font-family: 'Switzer-Regular';
-      src: url('../fonts/Switzer-Regular.woff2') format('woff2');
+      font-family: 'IBMPlexSans-Regular';
+      src: url('../fonts/IBMPlexSans-Regular.woff2') format('woff2');
       font-weight: 400;
       font-display: swap;
       font-style: normal;
     }
 
     @font-face {
-      font-family: 'Switzer-Italic';
-      src: url('../fonts/Switzer-Italic.woff2') format('woff2');
+      font-family: 'IBMPlexSans-SemiBold';
+      src: url('../fonts/IBMPlexSans-SemiBold.woff2') format('woff2');
+      font-weight: 600;
+      font-display: swap;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'IBMPlexSans-Italic';
+      src: url('../fonts/IBMPlexSans-Italic.woff2') format('woff2');
       font-weight: 400;
       font-display: swap;
       font-style: italic;
     }
 
     @font-face {
-      font-family: 'Switzer-Semibold';
-      src: url('../fonts/Switzer-Semibold.woff2') format('woff2');
+      font-family: 'IBMPlexSans-SemiBoldItalic';
+      src: url('../fonts/IBMPlexSans-SemiBold-Italic.woff2') format('woff2');
       font-weight: 600;
+      font-display: swap;
+      font-style: italic;
+    }
+
+    @font-face {
+      font-family: 'IBMPlexMono-Regular';
+      src: url('../fonts/IBMPlexMono-Regular.woff2') format('woff2');
+      font-weight: 400;
       font-display: swap;
       font-style: normal;
     }
 
     @font-face {
-      font-family: 'Switzer-SemiboldItalic';
-      src: url('../fonts/Switzer-SemiboldItalic.woff2') format('woff2');
-      font-weight: 600;
+      font-family: 'IBMPlexMono-Italic';
+      src: url('../fonts/IBMPlexMono-Italic.woff2') format('woff2');
+      font-weight: 400;
       font-display: swap;
       font-style: italic;
     }
